[gd_scene load_steps=2 format=3 uid="uid://cjhfvs5t1o0xn"]

[ext_resource type="Script" path="res://scripts/start_menu.gd" id="1_xryhy"]

[node name="StartMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xryhy")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.0235294, 1)

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/v_separation = 8

[node name="NewGame" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "New game"

[node name="Settings" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Settings"

[node name="Quit" type="Button" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="GridContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="GridContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="GridContainer/Quit" to="." method="_on_quit_pressed"]
